@@ -57,7 +57,7 @@ transfer_mode local
 # cron_mode 
 
 # If set to 1 allows the agent to be configured via the web console.
-remote_config 1
+remote_config 0
 
 
 # Module Definition
@@ -221,17 +221,16 @@ module_end
 module_begin
 module_name DNS
 module_type generic_proc
-module_exec ps aux | grep "sbin\/named" | wc -l
+module_exec ps -A | grep "sbin\/named" | wc -l
 module_description DNS Server
 module_end
 
-# Firewall always has 1 rule (allow) so we substract one.
 # You should have alerts in case the number of rules change
 
 module_begin
 module_name Firewall Status
 module_type generic_data
-module_exec echo `sudo ipfw show | wc -l` - 1 | bc
+module_exec ipfw show | wc -l
 module_description Firewall (number of rules) 
 module_end
 
@@ -252,14 +251,14 @@ module_end
 #module_begin
 #module_name Mail (SMTP)
 #module_type generic_proc
-#module_exec ps -A | grep "master" | grep -v "grep" | wc -l 
+#module_exec ps -A | grep "smtpd -n smtp" | wc -l 
 #module_description Mail - SMTP Server (postfix)
 #module_end
 
 #module_begin
 #module_name Mail (IMAP)
 #module_type generic_proc
-#module_exec ps -A | grep "cyrus" | grep -v "grep" | wc -l
+#module_exec ps -Au | grep "master" | grep "cyrus" | wc -l
 #module_description Mail - IMAP Server (cyrus)
 #module_end
 
@@ -302,14 +301,14 @@ module_end
 #module_begin
 #module_name NFS
 #module_type generic_proc
-#module_exec ps aux | grep "nfsd-master" | grep -v "grep" | wc -l
+#module_exec ps -A | grep "nfsd-master" | grep -v "grep" | wc -l
 #module_description NFS File Server
 #module_end
 
 module_begin
 module_name Open Directory
 module_type generic_proc
-module_exec ps aux | grep "bin\/krb5kdc" | wc -l 
+module_exec ps -A | grep "bin\/krb5kdc" | wc -l 
 module_description Open Directory
 module_end
 
@@ -330,7 +329,7 @@ module_end
 module_begin
 module_name Software Update
 module_type generic_proc
-module_exec if [ `ps -A | grep "etc\/swupd" | wc -l` -gt "1" ]; then echo 1; else echo 0; fi
+module_exec ps -A | grep "etc\/swupd" | wc -l
 module_description Software Update
 module_end
 
